# tmadl

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: domain.rs  infrastructure.rs  interface.rs  main.rs
src/domain/: recording.rs  recording_store.rs  summarizer.rs  summary.rs  transcription.rs
src/infrastructure/: claude_summarizer.rs  s3_recording_store.rs
src/interface/: ingestion.rs
tmadl-transcription-audio-to-clean-txt/: samconfig.toml  template.yaml
tmadl-transcription-audio-to-clean-txt/functions/aws_transcription_to_clean_txt/: app.py
tmadl-transcription-audio-to-clean-txt/functions/flatten_s3_tagset/: app.py
tmadl-transcription-audio-to-clean-txt/statemachine/: transcription_audio_to_clean_txt.asl.json
