[package]
name = "tmadl"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
aws-config = "1.6.2"
aws-sdk-bedrockruntime = "1.85.0"
aws-sdk-s3 = "1.84.0"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive", "unstable-doc"] }
serde_json = "1.0.140"
tabled = { version = "0.19.0", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt"] }
