[package]
name = "tmadl"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
aws-config = "1.6.3"
aws-sdk-bedrockruntime = "1.92.0"
aws-sdk-s3 = "1.91.0"
chrono = "0.4.41"
clap = { version = "4.5.44", features = ["derive", "unstable-doc"] }
serde_json = "1.0.140"
tabled = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt"] }
